editor windows shift after scene save fix

--- a/thing-editor/src/editor/style.css
+++ b/thing-editor/src/editor/style.css
@@ -29,6 +29,7 @@ smallSpace {
 
 body {
 	background: var(--bg-color);
+	overflow: hidden;
 	color: #737988;
 	line-height: normal;
 	font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
